--- a/charts/passbolt/templates/pdb.yaml
+++ b/charts/passbolt/templates/pdb.yaml
@@ -4,7 +4,7 @@
 apiVersion: policy/v1
 {{- else -}}
 apiVersion: policy/v1beta1
-{{- end -}}
+{{- end }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "passbolt.fullname" . }}
