fix ingress rendering (#125)
* fix ingress rendering

The condition to evaluate the version of kubernetes is wrong, this causes an invalid rendering on clusters with newer kubernetes version *e.g. 1.24)

* fixed pod disruption budget api version of newer kubernetes versions
bumped patch version

* fixed typo

* fix: bump version

* fix: typo

Co-authored-by: Dominique Arnou <dominique.arnou@gmail.com>

--- a/charts/passbolt/templates/pdb.yaml
+++ b/charts/passbolt/templates/pdb.yaml
@@ -1,5 +1,10 @@
 {{- if .Values.podDisruptionBudget.enabled -}}
+{{- $kubeVer := .Capabilities.KubeVersion.GitVersion -}}
+{{- if semverCompare ">=1.21-0" $kubeVer -}}
 apiVersion: policy/v1
+{{- else -}}
+apiVersion: policy/v1beta1
+{{- end }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "passbolt.fullname" . }}
