--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,24 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-  "bumpVersion": "patch"
+  "bumpVersion": "patch",
+  "regexManagers": [
+    {
+      "fileMatch": [
+        "^Chart.yaml$"
+      ],
+      "matchStringsStrategy": "combination",
+      "matchStrings": [
+        "appVersion:\\s+\"(?<currentValue>v[a-z0-9.-]+)\"",
+        "image:\\s+\"(?<depName>[a-z/.-]+):(?<currentValue>[a-z0-9.-]+)\""
+      ],
+      "datasourceTemplate": "docker",
+      "versioningTemplate": "docker"
+    }
+  ],
+  "helmv3": {
+    "fileMatch": [
+      "^Chart.yaml$"
+    ]
+  }
 }
