fix: update api-version

--- a/charts/default-chart/templates/horizontal-pod-autoscaler.yaml
+++ b/charts/default-chart/templates/horizontal-pod-autoscaler.yaml
@@ -1,5 +1,10 @@
 {{- if .Values.hpa.enabled -}}
+{{- $kubeVer := .Capabilities.KubeVersion.GitVersion -}}
+{{- if semverCompare ">=1.22-0" $kubeVer -}}
+apiVersion: autoscaling/v2
+{{- else -}}
 apiVersion: autoscaling/v2beta1
+{{- end }}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "default-chart.fullname" . }}
