--- a/charts/dependency-track/values.yaml
+++ b/charts/dependency-track/values.yaml
@@ -66,7 +66,12 @@ backend:
     repository: dependencytrack/apiserver
     tag: 4.6.3
     pullPolicy: IfNotPresent
-
+    
+  podAnnotations:
+    co.elastic.logs/enabled: "true"
+    co.elastic.logs/processors.1.add_fields.target: "data_stream"
+    co.elastic.logs/processors.1.add_fields.fields.category: "app"
+    
   service:
     type: ClusterIP
     port: 80
