feat(default-chart): add podAnnotations in deployment

--- a/charts/default-chart/templates/deployment.yaml
+++ b/charts/default-chart/templates/deployment.yaml
@@ -12,6 +12,10 @@ spec:
       {{- include "default-chart.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      {{- with .Values.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       labels:
         {{- include "default-chart.selectorLabels" . | nindent 8 }}
     spec:
