fix(dependency-track): remove trailing spaces & default annotations

--- a/charts/dependency-track/templates/deployment-backend.yaml
+++ b/charts/dependency-track/templates/deployment-backend.yaml
@@ -17,6 +17,10 @@ spec:
         app: {{ include "dependency-track.name" . }}
         type: backend
         release: {{ .Release.Name }}
+      {{- with .Values.backend.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
     spec:
       volumes:
         - name: data
