--- a/charts/clamapi/values.yaml
+++ b/charts/clamapi/values.yaml
@@ -17,6 +17,9 @@ clamav:
   host: clamav
   port: 3310
   timeout: 1000
+  image:
+    repository: ghcr.io/mailu/clamav
+    tag: 1.9.50
 
 env: {}
 #  SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE: 10MB
