--- a/charts/passbolt/values.yaml
+++ b/charts/passbolt/values.yaml
@@ -34,6 +34,9 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+deployment:
+  port: 80
+
 service:
   type: ClusterIP
   port: 80
