add support for configMap volumes

--- a/charts/default-chart/templates/deployment.yaml
+++ b/charts/default-chart/templates/deployment.yaml
@@ -93,6 +93,9 @@ spec:
           {{- if .secretName }}
           secret:
             secretName: {{ .secretName }}
+          {{- else if .configMapName }}
+          configMap:
+            name: {{ .configMapName }}
           {{- else }}
           persistentVolumeClaim:
             claimName: {{ $chartName }}-{{ .name }}
