--- a/ct.yaml
+++ b/ct.yaml
@@ -3,4 +3,5 @@ chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
   - stable-helm=https://charts.helm.sh/stable
   - wiremind=https://wiremind.github.io/wiremind-helm-charts
-helm-extra-args: '--timeout 500s'
+helm-extra-args:
+  - --timeout 500s
