--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -41,7 +41,7 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --debug --target-branch ${{ github.event.repository.default_branch }} --config ct.yaml
+        run: ct lint -d --target-branch ${{ github.event.repository.default_branch }} --config ct.yaml
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.7.0
